--- a/user_module/templates/change_password.html
+++ b/user_module/templates/change_password.html
@@ -13,7 +13,7 @@
                         <div class="auth-forms">
                             <div class="auth-forms-item">
                                 <div class="auth-logo" style="padding: 15px 0;">
-                                    <a href="{% url 'Home' %}"><img src="/static/img/default-icon/logo.png"
+                                    <a href="{% url 'Home' %}"><img src="/static/img/custom-images/logo.png"
                                                                     class="img-fluid"
                                                                     alt=""></a>
                                 </div>
@@ -25,9 +25,11 @@
                                     <form method="post" dir="rtl">
                                         {% csrf_token %}
                                         {{ change_form }}
-                                        <div class="alert alert-warning">{{ change_form.errors }}</div>
-                                        <div
-                                                class="d-flex justify-content-center flex-column align-items-center flex-wrap">
+                                        {% if change_form.errors %}
+                                            <div class="alert alert-warning">{{ change_form.errors }}</div>
+                                            <div
+                                        {% endif %}
+                                        class="d-flex justify-content-center flex-column align-items-center flex-wrap">
                                             <button class="btn-login login w-50 waves-effect waves-light">
                                                 تایید
                                             </button>
