--- a/user_module/templates/email_template.html
+++ b/user_module/templates/email_template.html
@@ -5,6 +5,7 @@
     <title>فروشگاه رستا</title>
 </head>
 <body>
-    <h1></h1>
+    <h3>{{ user.first_name }} عزیز</h3>
+<h2>کد شما هست : {{ user.verify_code }}</h2>
 </body>
 </html>
