--- a/user_module/templates/forget_password.html
+++ b/user_module/templates/forget_password.html
@@ -13,7 +13,7 @@
                         <div class="auth-forms">
                             <div class="auth-forms-item">
                                 <div class="auth-logo" style="padding: 15px 0;">
-                                    <a href="{% url 'Home' %}"><img src="/static/img/default-icon/logo.png"
+                                    <a href="{% url 'Home' %}"><img src="/static/img/custom-images/logo.png"
                                                                     class="img-fluid"
                                                                     alt=""></a>
                                 </div>
@@ -24,8 +24,8 @@
                                 <div class="auth-form">
                                     <form method="post" dir="rtl">
                                         {% csrf_token %}
-                                        {% if forget_form.errors %}
-                                            <div class="alert alert-warning">{{ forget_form.errors }}</div>
+                                        {% if error %}
+                                            <div class="alert alert-warning">هیچ کاربری با این ایمیل یافت نشد</div>
                                         {% endif %}
                                         {{ forget_form }}
                                         <div
