--- a/user_dashboard_module/templates/dashboard_template.html
+++ b/user_dashboard_module/templates/dashboard_template.html
@@ -17,8 +17,10 @@
                                 <div class="ui-box-item">
                                     <div class="ui-box-item-desc" style="border-radius: 10px;background-color: #fff;">
                                         <div class="dashboard-user-img-profile">
-                                            <img src="{{ user.avatar.url }}" width="80" height="80"
-                                                class="img-fluid rounded-circle" alt="avatar">
+                                            <img src="{% if user.avatar %}
+                                            	{{ user.avatar.url }}{% else %}/static/img/default-icon/user-profile.png
+                                            {% endif %}" width="80" height="80"
+                                                class="rounded-circle" alt="avatar">
                                         </div>
                                         <div class="dashboard-user-info">
                                             <h6 class="user-name">{{ user.first_name }} {{ user.last_name }}</h6>
@@ -27,7 +29,7 @@
                                         <div class="dashboard-user-btn">
                                             <div>
                                                 <i class="bi bi-arrow-left-circle"></i>
-                                                <a href="index.html" class="text-muted">خروج از حساب</a>
+                                                <a href="{% url 'logout' %}" class="text-muted">خروج از حساب</a>
                                             </div>
                                         </div>
                                     </div>
