--- a/user_dashboard_module/templates/edit_user_dashboard.html
+++ b/user_dashboard_module/templates/edit_user_dashboard.html
@@ -62,15 +62,9 @@
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="order.html" class="nav-link text-muted">
+                                            <a href="{% url 'user-basket' %}" class="nav-link text-muted">
                                                 <i class="bi bi-basket-fill"></i>
-                                                <span>سفارشات</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="comments.html" class="nav-link text-muted">
-                                                <i class="bi bi-pencil"></i>
-                                                <span>نقد و نظرات</span>
+                                                <span>سبد خرید</span>
                                             </a>
                                         </li>
                                     </ul>
